--- a/index.html
+++ b/index.html
@@ -13,6 +13,65 @@
 </head>
 
 <body>
-    
+    <!-- Sidebar -->
+    <div class="main-container">
+        <aside>
+            <!-- Title -->
+
+            <!-- CTA -->
+
+            <!-- Playlit -->
+
+            <!-- Account details -->
+        </aside>
+
+        <!-- Main Content -->
+        <main>
+            <!-- CTA -->
+            <header class="cta-header">
+                <button>EFFETTUA L'UPGRADE</button>
+            </header>
+            <!-- Navbar -->
+            <ul class="navbar">
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+                <li>
+                    <a href="#">IN EVIDENZA </a>
+                </li>
+            </ul>
+
+        <h2>Recently Played</h2>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <!-- Content -->
+        </main>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <!-- Artist -->
+
+        <!-- Player -->
+
+        <!-- CTA -->
+    </footer>
 </body>
 </html>
