--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <header class="cta-header">
                 <button>EFFETTUA L'UPGRADE</button>
             </header>
+
             <!-- Navbar -->
             <ul class="navbar">
                 <li>
@@ -54,23 +55,75 @@
             </ul>
 
         <h2>Recently Played</h2>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
+            <!-- Playlist Content -->
+
+            <div class="playlist-content">
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+                <div class="test"></div>
+            </div>
             <!-- Content -->
         </main>
     </div>
     <!-- Footer -->
     <footer>
         <!-- Artist -->
-
+        <div class="footer-left">Test</div>
+        <div class="footer-center">Test</div>
+        <div class="footer-right">Test</div>
         <!-- Player -->
-
+        
         <!-- CTA -->
     </footer>
 </body>
