main content test

--- a/index.html
+++ b/index.html
@@ -17,103 +17,119 @@
     <div class="main-container">
         <aside>
             <!-- Title -->
-
+            <img src="./img/logo.svg" alt="Logo-spotify">
             <!-- CTA -->
-
+            <div class="test"></div>
             <!-- Playlit -->
+            <div class="test"></div>
 
             <!-- Account details -->
         </aside>
 
         <!-- Main Content -->
         <main>
-            <!-- CTA -->
-            <header class="cta-header">
-                <button>EFFETTUA L'UPGRADE</button>
-            </header>
+                <!-- CTA -->
+                <header class="cta-header">
+                    <button>EFFETTUA L'UPGRADE</button>
+                </header>
 
-            <!-- Navbar -->
-            <ul class="navbar">
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-                <li>
-                    <a href="#">IN EVIDENZA </a>
-                </li>
-            </ul>
+                <!-- Navbar -->
+                <ul class="navbar">
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                    <li>
+                        <a href="#">IN EVIDENZA </a>
+                    </li>
+                </ul>
 
-        <h2>Recently Played</h2>
-            <!-- Playlist Content -->
+                <!-- Playlist Content -->
 
-            <div class="playlist-content">
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-                <div class="test"></div>
-            </div>
-            <!-- Content -->
+            <section class="playlist">
+                <h2>Recently Played</h2>
+                <div class="playlist-content">
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                </div>
+            </section>
+
+                <!-- Creati -->
+
+            <section class="playlist">
+                <h2>Creati per john Doe</h2>
+                <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
+                <div class="playlist-content">
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Artisti più Popolari -->
+
+            <section class="playlist">
+                <h2>Creati per john Doe</h2>
+                <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
+                <div class="playlist-content">
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Heavy Metal</h4>
+                        <span class="subtitle grey">Subtitle</span>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <!-- Footer -->
