--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/stranger.jpeg" alt="stranger playlist">
+                        <h4>Stranger Things, Vol. 1 (a Netflix original Series Soundtrack)</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/aquietplace.jpeg" alt="aquietplace playlist">
+                        <h4>A Quiet Place</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/split.jpeg" alt="split playlist">
+                        <h4>Split</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/cure.jpeg" alt="cure playlist">
+                        <h4>A Cure for wellness</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/sinister.jpeg" alt="sinister playlist">
+                        <h4>Sinister</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                 </div>
@@ -100,13 +100,13 @@
                 <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
                 <div class="playlist-content">
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/radar.jpeg" alt="radar playlist">
+                        <h4>Release Radar</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img src="./img/mixdaily.jpeg" alt="mix playlist">
+                        <h4>Dayli Mix 1 </h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                 </div>
@@ -115,17 +115,17 @@
             <!-- Artisti più Popolari -->
 
             <section class="playlist">
-                <h2>Creati per john Doe</h2>
+                <h2>Artisti più Popolari</h2>
                 <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
                 <div class="playlist-content">
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img class="bd-radius" src="./img/youg.jpeg" alt="youg playlist">
+                        <h4>Lada el Rey</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
-                        <h4>Heavy Metal</h4>
+                        <img class="bd-radius" src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <h4>Ludovico Einaudi</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </div>
                 </div>
