--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
                 </header>
 
                 <!-- Navbar -->
-                <ul class="navbar">
+                <ul class="navbar grey">
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">In Evidenza</a>
                     </li>
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">Podcast</a>
                     </li>
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">Classifiche</a>
                     </li>
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">Generi e Mood</a>
                     </li>
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">Nuove Uscite</a>
                     </li>
                     <li>
-                        <a href="#">IN EVIDENZA </a>
+                        <a class="grey" href="#">Scopri</a>
                     </li>
                 </ul>
 
@@ -135,7 +135,15 @@
     <!-- Footer -->
     <footer>
         <!-- Artist -->
-        <div class="footer-left">Test</div>
+        <div class="footer-left">
+            <img src="./img/sinister.jpeg" alt="img brano">
+            <div>
+                <h5>Sinister</h5>
+                <span class="subtitle grey">Nome Brano</span>
+                <div></div>
+            </div>
+
+        </div>
         <div class="footer-center">Test</div>
         <div class="footer-right">Test</div>
         <!-- Player -->
