--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <!-- Title -->
             <img src="./img/logo.svg" alt="Logo-spotify">
             <!-- CTA -->
-            <div class="test"></div>
+            <div class="aside-playlist">test</div>
             <!-- Playlit -->
-            <div class="test"></div>
+            <div class="aside-account">test</div>
 
             <!-- Account details -->
         </aside>
@@ -140,9 +140,11 @@
             <div>
                 <h5>Sinister</h5>
                 <span class="subtitle grey">Nome Brano</span>
-                <div></div>
             </div>
-
+            <div>
+                <i class="far fa-heart grey"></i>
+                <i class="far fa-folder grey"></i>
+            </div>
         </div>
         <div class="footer-center">Test</div>
         <div class="footer-right">Test</div>
