--- a/index.html
+++ b/index.html
@@ -146,7 +146,28 @@
                 <i class="far fa-folder grey"></i>
             </div>
         </div>
-        <div class="footer-center">Test</div>
+        <div class="footer-center">
+            <div class="player">
+                <ul class="player-buttons">
+                    <li>
+                        <i class="far fa-random"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-step-backward"></i>
+                    </li>
+                    <li>
+                        <i class="far fa-play-circle"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-step-forward"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-redo"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="timeline">test</div>
+        </div>
         <div class="footer-right">Test</div>
         <!-- Player -->
         
