--- a/index.html
+++ b/index.html
@@ -147,28 +147,40 @@
             </div>
         </div>
         <div class="footer-center">
-            <div class="player">
-                <ul class="player-buttons">
-                    <li>
-                        <i class="far fa-random"></i>
-                    </li>
-                    <li>
-                        <i class="fas fa-step-backward"></i>
-                    </li>
-                    <li>
-                        <i class="far fa-play-circle"></i>
-                    </li>
-                    <li>
-                        <i class="fas fa-step-forward"></i>
-                    </li>
-                    <li>
-                        <i class="fas fa-redo"></i>
-                    </li>
-                </ul>
+            <ul class="player-buttons">
+                <li>
+                    <i class="fas fa-random"></i>
+                </li>
+                <li>
+                    <i class="fas fa-step-backward"></i>
+                </li>
+                <li>
+                    <i class="far fa-play-circle"></i>
+                </li>
+                <li>
+                    <i class="fas fa-step-forward"></i>
+                </li>
+                <li>
+                    <i class="fas fa-redo"></i>
+                </li>
+            </ul>
+            <div class="timeline">
+                <div class="time">0.25</div>
+                <div class="bar">
+                    <div class="color-bar"></div>
+                </div>
+                <div class="time">4.35</div>
             </div>
-            <div class="timeline">test</div>
         </div>
-        <div class="footer-right">Test</div>
+        <div class="footer-right">
+            <i class="fas fa-list"></i>
+            <i class="fas fa-desktop"></i>
+            <i class="fas fa-volume-up"></i>
+            <div class="bar">
+                <div class="color-bar"></div>
+            </div>
+
+        </div>
         <!-- Player -->
         
         <!-- CTA -->
