--- a/index.html
+++ b/index.html
@@ -19,7 +19,58 @@
             <!-- Title -->
             <img src="./img/logo.svg" alt="Logo-spotify">
             <!-- CTA -->
-            <div class="aside-playlist">test</div>
+            <div class="aside-playlist grey">
+                <ul>
+                    <li>
+                        <a class="aside-link" href="#">
+                            <img class="svg" src="./img/home.svg" alt="home">
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="aside-link" href="#">
+                            <img class="svg" src="./img/search.svg" alt="Search">
+                            <span>Cerca</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="aside-link" href="#">
+                            <img class="svg" src="./img/libreria.svg" alt="home">
+                            <span>La tua Libreria</span>
+                        </a>
+                    </li>
+                </ul>
+            <h4>PLAYLIST</h4>
+                <ul>
+                    <li>
+                        <a href="#" class="aside-link">
+                            <i class=" svg fas fa-plus-square"></i>
+                            Crea Playlist
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                </ul>
+            </div>
             <!-- Playlit -->
             <div class="aside-account">test</div>
 
@@ -132,9 +183,11 @@
             </section>
         </main>
     </div>
+
     <!-- Footer -->
     <footer>
         <!-- Artist -->
+
         <div class="footer-left">
             <img src="./img/sinister.jpeg" alt="img brano">
             <div>
@@ -146,6 +199,8 @@
                 <i class="far fa-folder grey"></i>
             </div>
         </div>
+        <!-- Player -->
+
         <div class="footer-center">
             <ul class="player-buttons">
                 <li>
@@ -172,6 +227,8 @@
                 <div class="time">4.35</div>
             </div>
         </div>
+        <!-- CTA -->
+
         <div class="footer-right">
             <i class="fas fa-list"></i>
             <i class="fas fa-desktop"></i>
@@ -181,9 +238,7 @@
             </div>
 
         </div>
-        <!-- Player -->
         
-        <!-- CTA -->
     </footer>
 </body>
 </html>
