--- a/index.html
+++ b/index.html
@@ -23,56 +23,69 @@
                 <ul>
                     <li>
                         <a class="aside-link" href="#">
-                            <img class="svg" src="./img/home.svg" alt="home">
-                            <span>Home</span>
+                            <img class="svg" src="./img/home.svg" alt="Home">
+                            <span class="grey">Home</span>
                         </a>
                     </li>
                     <li>
                         <a class="aside-link" href="#">
                             <img class="svg" src="./img/search.svg" alt="Search">
-                            <span>Cerca</span>
+                            <span class="grey">Cerca</span>
                         </a>
                     </li>
                     <li>
                         <a class="aside-link" href="#">
-                            <img class="svg" src="./img/libreria.svg" alt="home">
-                            <span>La tua Libreria</span>
+                            <img class="svg" src="./img/libreria.svg" alt="Library">
+                            <span class="grey">La tua Libreria</span>
                         </a>
                     </li>
                 </ul>
+                <!-- New Playlist -->
             <h4>PLAYLIST</h4>
                 <ul>
                     <li>
-                        <a href="#" class="aside-link">
+                        <a href="#" class="aside-link grey">
                             <i class=" svg fas fa-plus-square"></i>
                             Crea Playlist
                         </a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
                     <li>
-                        <a href="#">Nome Playlist</a>
+                        <a class="grey" href="#">Nome Playlist</a>
                     </li>
+                    
                 </ul>
             </div>
             <!-- Playlit -->
-            <div class="aside-account">test</div>
+            <div class="aside-account">
+                <div class="app">
+                    <img class="download-app" src="./img/download.svg" alt="download">
+                    <span class="grey">Installa l'app</span>
+                </div>
+                <hr>
+                <div class="app">
+                    <img class="profile" src="./img/profile.svg" alt="download">
+                    <h4 class="">John Doe</h4>
+                </div>
+
+            </div>
 
             <!-- Account details -->
         </aside>
@@ -147,7 +160,7 @@
                 <!-- Creati -->
 
             <section class="playlist">
-                <h2>Creati per john Doe</h2>
+                <h2>Creati per John Doe</h2>
                 <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
                 <ul class="playlist-content">
                     <li class="card">
