--- a/index.html
+++ b/index.html
@@ -75,16 +75,15 @@
             </div>
             <!-- Playlit -->
             <div class="aside-account">
-                <div class="app">
+                <a class="app" href="#">
                     <img class="download-app" src="./img/download.svg" alt="download">
                     <span class="grey">Installa l'app</span>
-                </div>
+                </a>
                 <hr>
                 <div class="app">
                     <img class="profile" src="./img/profile.svg" alt="download">
                     <h4 class="">John Doe</h4>
                 </div>
-
             </div>
 
             <!-- Account details -->
