--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                 <ul>
                     <li>
                         <a class="aside-link" href="#">
-                            <img class="svg" src="./img/home.svg" alt="Home">
+                            <img class="svg grey" src="./img/home.svg" alt="Home">
                             <span class="grey">Home</span>
                         </a>
                     </li>
                     <li>
                         <a class="aside-link" href="#">
-                            <img class="svg" src="./img/search.svg" alt="Search">
+                            <img class="svg grey" src="./img/search.svg" alt="Search">
                             <span class="grey">Cerca</span>
                         </a>
                     </li>
                     <li>
                         <a class="aside-link" href="#">
-                            <img class="svg" src="./img/libreria.svg" alt="Library">
+                            <img class="svg grey" src="./img/libreria.svg" alt="Library">
                             <span class="grey">La tua Libreria</span>
                         </a>
                     </li>
@@ -45,7 +45,7 @@
                 <ul>
                     <li>
                         <a href="#" class="aside-link grey">
-                            <i class=" svg fas fa-plus-square"></i>
+                            <i class=" svg grey fas fa-plus-square"></i>
                             Crea Playlist
                         </a>
                     </li>
@@ -85,8 +85,6 @@
                     <h4 class="">John Doe</h4>
                 </div>
             </div>
-
-            <!-- Account details -->
         </aside>
 
         <!-- Main Content -->
@@ -124,32 +122,50 @@
                 <h2>Recently Played</h2>
                 <ul class="playlist-content">
                     <li class="card">
-                        <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <div class="play-image">
+                            <img src="./img/metal_lifting.jpg" alt="metal playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Heavy Metal</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/stranger.jpeg" alt="stranger playlist">
+                        <div class="play-image">
+                            <img src="./img/stranger.jpeg" alt="stranger playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Stranger Things, Vol. 1 (a Netflix original Series Soundtrack)</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/aquietplace.jpeg" alt="aquietplace playlist">
+                        <div class="play-image">
+                            <img src="./img/aquietplace.jpeg" alt="aquietplace playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>  
                         <h4>A Quiet Place</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/split.jpeg" alt="split playlist">
+                        <div class="play-image">
+                            <img src="./img/split.jpeg" alt="split playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Split</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/cure.jpeg" alt="cure playlist">
+                        <div class="play-image">
+                            <img src="./img/cure.jpeg" alt="cure playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>A Cure for wellness</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/sinister.jpeg" alt="sinister playlist">
+                        <div class="play-image">
+                            <img src="./img/sinister.jpeg" alt="sinister playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Sinister</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
@@ -163,12 +179,18 @@
                 <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
                 <ul class="playlist-content">
                     <li class="card">
-                        <img src="./img/radar.jpeg" alt="radar playlist">
+                        <div class="play-image">
+                            <img src="./img/radar.jpeg" alt="radar playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Release Radar</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img src="./img/mixdaily.jpeg" alt="mix playlist">
+                        <div class="play-image">
+                            <img src="./img/mixdaily.jpeg" alt="mix playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Dayli Mix 1 </h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
@@ -182,12 +204,18 @@
                 <div class="subtitle grey">Più Ascolti, più accurati saranno i suggerimenti</div>
                 <ul class="playlist-content">
                     <li class="card">
-                        <img class="bd-radius" src="./img/youg.jpeg" alt="youg playlist">
+                        <div class="play-image">
+                            <img class="bd-radius" src="./img/youg.jpeg" alt="youg playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Lada el Rey</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
                     <li class="card">
-                        <img class="bd-radius" src="./img/metal_lifting.jpg" alt="metal playlist">
+                        <div class="play-image">
+                            <img class="bd-radius" src="./img/metal_lifting.jpg" alt="metal playlist">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                         <h4>Ludovico Einaudi</h4>
                         <span class="subtitle grey">Subtitle</span>
                     </li>
