--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="main-container">
         <aside>
             <!-- Title -->
-            <img src="./img/logo.svg" alt="Logo-spotify">
+            <img class="logo-big" src="./img/logo.svg" alt="Logo-spotify">
+            <img class="logo-small" src="./img/logo-small.svg" alt="logo-small">
             <!-- CTA -->
             <div class="aside-playlist grey">
                 <ul>
@@ -262,7 +263,9 @@
             <div class="timeline">
                 <div class="time">0.25</div>
                 <div class="bar">
-                    <div class="color-bar"></div>
+                    <div class="color-bar">
+                        <div class="circle"></div>
+                    </div>
                 </div>
                 <div class="time">4.35</div>
             </div>
@@ -274,7 +277,9 @@
             <i class="fas fa-desktop"></i>
             <i class="fas fa-volume-up"></i>
             <div class="bar">
-                <div class="color-bar"></div>
+                <div class="color-bar">
+                    <div class="circle"></div>
+                </div>
             </div>
 
         </div>
